# sysforge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sysforge/: __init__.py  cli.py  reporting.py  utils.py
src/sysforge/checks/: __init__.py  base.py  core.py
src/sysforge/collectors/: __init__.py  base.py  system.py
tests/: test_checks.py  test_cli.py  test_collectors.py  test_reporting.py  test_utils.py
