[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysforge"
version = "0.1.0"
description = "A modular system diagnostics and analysis CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Joshua Ward" }]
dependencies = [
  "typer>=0.12.3",
  "click>=8.1.7",
]

[project.scripts]
sysforge = "sysforge.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/sysforge/cli.py" = ["B008"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
